Adding some UI changes for the AppStore release

--- a/Gitfy/Base.lproj/Main.storyboard
+++ b/Gitfy/Base.lproj/Main.storyboard
@@ -94,13 +94,11 @@
                                                 <constraint firstAttribute="height" constant="20" id="Ey7-r8-HJ7"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
-                                            <color key="textColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ul3-B2-3h9">
                                             <rect key="frame" x="16" y="5" width="359" height="20"/>
                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -114,7 +112,7 @@
                                         <constraint firstAttribute="bottomMargin" secondItem="oJG-bq-5sy" secondAttribute="bottom" constant="-1" id="oNK-W2-nwQ"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <connections>
                                     <outlet property="repositoryDescription" destination="oJG-bq-5sy" id="hxG-K5-gh5"/>
                                     <outlet property="repositoryName" destination="ul3-B2-3h9" id="wbd-f0-3X0"/>
